Add ssb-bip profile and comment back in code coverage profile